--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PZ'
 - !lcsh 'Animals -- Juvenile fiction'
+- GITenberg
 tableOfContents: Where Grandfather Frog Got His Big Mouth -- Where Miser the Trade
   Rat First Set Up Shop -- Where Yap-Yap the Prairie Dog Used His Wits -- Where Yellow-Wing
   Got His Liking for the Ground -- Where Little Chief Learned To Make Hay -- Where
